--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,21 @@
 @import "tailwindcss";
+
+@theme {
+    --color-primary: #806DF2;
+}
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+html{
+    font-size: 16px;
+}
 html, body {
     font-family: var(--font-sans) sans-serif;
 }
 body{
-    color: #2a2a2a;
-    background-color: #f6f5ff;
 
+    @apply bg-gradient-to-t from-[#F3EEFF] to-[#F6F5FF] dark:from-[#1a1a1a] dark:to-[#121212] text-[#2a2a2a] dark:text-[#f5f5f5];
+    color: #2a2a2a;
     min-width: 320px;
     min-height: 100vh;
 }
