--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,32 @@
 @import "tailwindcss";
-
-@theme {
-    --color-primary: #806DF2;
-}
-
 @custom-variant dark (&:where(.dark, .dark *));
+
+:root {
+    --foreground: #2a2a2a;
+    --background: #f5f5f5;
+    --primary: #806DF2;
+    --bg-gradient: linear-gradient(to top, #F3EEFF, #F6F5FF);
+    --card:#fff
+}
+.dark {
+    --foreground: #f5f5f5;
+    --background: #121212;
+    --primary: #806DF2;
+    --bg-gradient: linear-gradient(to top, #1a1a1a, #121212);
+    --card: #1a1a1a;
+}
+@theme inline {
+    --color-background:var(--background);
+    --color-foreground:var(--foreground);
+    --color-primary: var(--primary);
+    --color-card:var(--card);
+}
+@layer base {
+    body {
+        @apply bg-background text-foreground;
+        background-image: var(--bg-gradient);
+    }
+}
 
 html{
     font-size: 16px;
@@ -12,10 +34,6 @@ html{
 html, body {
     font-family: var(--font-sans) sans-serif;
 }
-body{
-
-    @apply bg-gradient-to-t from-[#F3EEFF] to-[#F6F5FF] dark:from-[#1a1a1a] dark:to-[#121212] text-[#2a2a2a] dark:text-[#f5f5f5];
-    color: #2a2a2a;
-    min-width: 320px;
-    min-height: 100vh;
+button{
+    cursor: pointer;
 }
