fix: last-tasks Tasks.tsx

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,22 @@
     }
 }
 
+@layer utilities {
+    @keyframes stripes {
+        from {
+            background-position: 0 0;
+        }
+        to {
+            background-position: 56px 0;
+        }
+    }
+
+    .animate-stripes {
+        animation: stripes 2s linear infinite;
+    }
+}
+
+
 html{
     font-size: 16px;
 }
